<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Homework 1</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="first_text">Welcome to Android!</string>
    <string name="second_text">This is the first screen.</string>
    <string name="second_button_text">Start</string>

    <!-- Second Page strings -->
    <string name="second_screen_text">This is the second screen.</string>
    <string name="text1">Text1</string>
    <string name="text2">Text2</string>
    <string name="text3">Text3</string>
    <string name="title_activity_second">Second Screen</string>

</resources>
